<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OperationActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/count_apple_to_box"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/info_first_apple"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintEnd_toEndOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/colorGreen"
        android:gravity="center_horizontal"
        android:background="@drawable/apple_box"/>
    <Button
        android:id="@+id/add_apples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/info_first_apple"
        android:layout_marginTop="24dp"
        android:text="@string/add_apples"/>
    <Button
        android:id="@+id/take_apples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/info_first_apple"
        android:layout_marginTop="24dp"
        android:text="@string/take_apples"/>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       app:layout_constraintStart_toEndOf="@id/add_apples"
        app:layout_constraintTop_toTopOf="@id/add_apples"
        app:layout_constraintBottom_toBottomOf="@id/add_apples"
       app:layout_constraintEnd_toStartOf="@id/take_apples"
        android:text="@string/reset"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>