<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/tv_first_count_apple"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="64dp"
      android:layout_marginStart="24dp"
      android:text="@string/first_count_apple"
      android:textStyle="bold"
      android:textSize="16sp"/>
    <TextView
        android:id="@+id/max_count_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_first_count_apple"
        app:layout_constraintTop_toBottomOf="@id/tv_first_count_apple"
        android:layout_marginTop="64dp"
        android:textSize="16sp"
        android:text="@string/max_count_apple_to_box"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_count_first_apple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_first_count_apple"
        app:layout_constraintEnd_toEndOf="@id/et_max_count_box"
        app:layout_constraintStart_toStartOf="@id/et_max_count_box"
        app:layout_constraintBottom_toBottomOf="@id/tv_first_count_apple"
        android:inputType="number"/>
    <EditText
        android:id="@+id/et_max_count_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/max_count_box"
        app:layout_constraintTop_toTopOf="@id/max_count_box"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="@id/max_count_box"
        android:inputType="number"/>
    <Button
        android:id="@+id/bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_max_count_box"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="96dp"
        android:text="@string/next"
        android:textSize="24sp"  />


</androidx.constraintlayout.widget.ConstraintLayout>